--- a/readme
+++ b/readme
@@ -25,8 +25,8 @@ I don't really need it :P
 
 Usage
 
-If you have not yet installed the archiso package, you should first off all run the
-archisocreate:
+First of all you should run the archisocreate to check for archiso and also create some folders and files in your 
+/root/ directory:
 
 archie ~$ ./archisocreate 
 
